# SequenceAlignment

./: LICENSE  README.md
c_code/: .gitignore  CMakeLists.txt  helpers.c  helpers.h  main.c  nw.c  nw.h  nwParallel.c  nwParallel.h  sw.c  sw.h  swGotoh.c  swGotoh.h  swGotohParallel.c  swGotohParallel.h  swParallel.c  swParallel.h  tests.c  tests.h
cuda_code/: Makefile  helpers.cu  helpers.cuh  main.cu  sw.cu  sw.cuh  swGotoh.cu  swGotoh.cuh  swSingleBlock.cu  swSingleBlock.cuh  tests.cu  tests.cuh
diss/: .gitignore  .latexmkrc  count_diss.sh  diss.tex  initial_papers.txt  phase1.txt  progress_report.tex  propbody.tex  proposal.tex  refs.bib  repo_overview.tex
diss/chapters/: concl.tex  eval.tex  impl.tex  intro.tex  prep.tex
fpga_code/: README.md
fpga_code/Sequence_Aligner/: .gitignore  Sequence_Aligner.qpf  Sequence_Aligner.qsf  accelerator_hps.qsys  accelerator_hps.sopcinfo  backtrace.sv  backtrace_with_ram.sv  datatypesPkg.sv  de1soc_pin_assignments.qsf  fifo_16b_1024w.qip  fifo_16b_1024w.v  fifo_16b_1024w_bb.v  hps_sdram_p0_summary.csv  macro.vh  med_solver.sv  med_solver_avalon.sv  med_solver_with_ram.sv  med_solver_with_ram_avalon.sv  pe.sv  pe_bram.qip  pe_bram.v  pe_bram_bb.v  pe_with_ram.sv  rbf_converter.cof  short_seq_hps.qsys  short_seq_hps.sopcinfo  short_solver.sv  short_solver_avalon.sv  toplevel.qsf  toplevel.sv
fpga_code/Sequence_Aligner/testbenches/: README.md  runblosum.do  (+11 more)
fpga_code/c_interface/: Makefile  device_manager.c  device_manager.h  main.c  program_fpga.sh  scoring.c  scoring.h  sequence_file_reader.c  sequence_file_reader.h
